recursion.lessons.recursion.dragoncurve.DragonCurve1.scala.error
DragonCurve1:3: error: not found: value u
u = (x + z)/2 + (t - y)/2
^DragonCurve1:4: error: not found: value v
v = (y + t)/2 - (z - x)/2
^DragonCurve1:6: error: not found: value u
allerVers(u,v)
          ^