recursion.lessons.recursion.dragoncurve.DragonCurve1.scala.code
def dragon(order:Int, x:Double, y:Double, z:Double, t:Double) {
u = (x + z)/2 + (t - y)/2
v = (y + t)/2 - (z - x)/2
setPos(x,y)
allerVers(u,v)


}
